# swarmroles

./: .bumpversion.cfg  .cspell.json  .gitignore  .quickdocs.yml  .readthedocs.yml  .trufflehog3.yml  CONTRIBUTING.md  Gruntfile.js  README.md  galaxy.yml  package.json  pyproject.toml  setup.cfg
.github/workflows/: review.yml
docs/: conf.py  index.rst
docs/sphinx/: conf.py
docs/static/: styles.css
joellefkowitz/swarmroles/: galaxy.yml
roles/base/tasks/: main.yml
roles/certbot/: README.md
roles/certbot/meta/: main.yml
roles/certbot/tasks/: main.yml
roles/docker/: README.md
roles/docker/tasks/: main.yml
roles/stack_deployer/: README.md
roles/stack_deployer/defaults/: main.yml
roles/stack_deployer/tasks/: copy.yml  deploy.yml  main.yml
roles/swarm_initiator/: README.md
roles/swarm_initiator/defaults/: main.yml
roles/swarm_initiator/tasks/: initialize.yml  main.yml
roles/swarm_manager/: README.md
roles/swarm_manager/tasks/: main.yml  pull.yml
roles/swarm_worker/: README.md
roles/swarm_worker/tasks/: join.yml
src/base/: README.md
src/docker/: README.md
src/docker/defaults/: main.yml
src/docker/tasks/: install.yml  main.yml
src/stack_deployer/tasks/: copy.yml  main.yml
src/swarm_initiator/defaults/: main.yml
src/swarm_initiator/tasks/: initialize.yml  main.yml
src/swarm_manager/tasks/: join.yml  main.yml  pull.yml
src/swarm_worker/tasks/: main.yml
