[metadata]
name = swarmroles
version = 1.0.0
description = Roles for deploying a docker swarm
url = https://github.com/JoelLefkowitz/swarmroles
license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown
author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

[portfolio]
languages = Python
frameworks = Ansible
status = In development
project_type = Community work
