[metadata]
name = swarmroles
version = 1.4.0

description = Ansible roles for deploying a docker swarm.
url = https://github.com/JoelLefkowitz/swarmroles

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

[portfolio]
project_type = Community work
status = Stable
homepage = https://swarmroles.readthedocs.io

frameworks = 
    Ansible
    Docker
    Certbot

paradigms = 
    Declarative programming
